--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,17 +42,14 @@ dependencies:
   pull_to_refresh_flutter3: ^2.0.2
   dropdown_button2: ^2.3.9
   intl: ^0.17.0
-  readmore: ^2.1.0 
-  # buttons_tabbar: ^1.2.0
-  flutter_verification_code_field: ^1.0.4
+  readmore: ^2.1.0
   fluttertoast: ^8.2.1
-
+  google_maps_flutter: ^2.2.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
-  restart_app: ^1.2.1
   get: ^4.6.6
   # context: ^0.0.1-nullsafety.0
 
