--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   readmore: ^2.1.0
   fluttertoast: ^8.2.1
   google_maps_flutter: ^2.2.6
+  image: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
