--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
     {
-    "name": "my_flutter_project",
-    "short_name": "my_flutter_project",
+    "name": "ubsoil",
+    "short_name": "ubsoil",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
