--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "my_flutter_project" "\0"
+            VALUE "FileDescription", "ubsoil" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "my_flutter_project" "\0"
+            VALUE "InternalName", "ubsoil" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "my_flutter_project.exe" "\0"
-            VALUE "ProductName", "my_flutter_project" "\0"
+            VALUE "OriginalFilename", "ubsoil.exe" "\0"
+            VALUE "ProductName", "ubsoil" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
