--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   permission_handler: ^11.3.1
   sqflite: ^2.0.0+4
   path: ^1.8.0
-  webview_flutter: ^4.0.1
+  webview_flutter: ^4.10.0
+  webview_flutter_wkwebview: ^3.15.0
   pull_to_refresh_flutter3: ^2.0.2
   dropdown_button2: ^2.3.9
   intl: ^0.17.0
